<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/toLiveDataFragmentBtn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_livedatafragment" />

            <Button
                android:id="@+id/toLiveDataMapFragmentBtn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_livedatamapfragment" />

            <Button
                android:id="@+id/toLiveDataSwitchMapFragmentBtn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_livedataswitchmapfragment" />

        </LinearLayout>
    </FrameLayout>
</layout>
