<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.livedata.switchmap.LiveDataSwitchMapFragment">

        <TextView
            android:id="@+id/textViewA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hello_blank_fragment"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/generateABtn"
            app:layout_constraintStart_toStartOf="@+id/generateABtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/generateABtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/generate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewA" />

        <TextView
            android:id="@+id/textViewB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hello_blank_fragment"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/generateBBtn"
            app:layout_constraintStart_toStartOf="@+id/generateBBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/generateBBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/generate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewB" />

        <Switch
            android:id="@+id/switchA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SwitchA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generateABtn" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchA" />

        <Button
            android:id="@+id/removeFragmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>